@@ -317,4 +317,4 @@ See http://sg.danny.cz/sg/tools.html
 
 
 Doug Gilbert
-26th October 2008
+15th November 2008
