@@ -79,8 +79,8 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Sun Oct 26 2008 - dgilbert at interlog dot com
-- sg_dd: add flock, of2= and posix_fadvise support
+* Sat Nov 15 2008 - dgilbert at interlog dot com
+- sg_dd: add flock, of2= and posix_fadvise support with nocache flag
   * sg3_utils-1.27
 
 * Wed Jun 25 2008 - dgilbert at interlog dot com
