@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Thu, 14 Oct 2008 23:59:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 15 Nov 2008 20:06:00 -0500
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
